2016-07-08	armv4t workaround.

		include/innocent-pear/rofl.h :
		- worked around register allocation issue in rofl_impl_
		  syscall<...>::syscall(...) when compiling for armv4t

2016-07-06	Much saner pseudorandomness, and more for ptrace(...).

		include/innocent-pear/bbq.h :
		- now uses uint64_t instead of uint_least64_t
		- innocent_pear::impl::update_outer(...) now needs one more
		  parameter to select the pseudorandom generator

		GNUmakefile :
		- now uses uint64_t instead of uint_least64_t
		- $(conf_Have_cxx_typ_struct_bfd) ->
		  $(conf_Have_cxx_typ_struct_x20_bfd)

		bin/innocent-pear-c++.ccc ,
		include/innocent-pear/host/lolcat.h ,
		share/innocent-pear/calm.ccc ,
		share/innocent-pear/keyboard.ccc ,
		share/innocent-pear/nomnom.cc :
		- now uses uint64_t instead of uint_least64_t

		configure :
		- now looks for uint64_t instead of uint_least64_t

		include/innocent-pear/dawg.h ,
		include/innocent-pear/host/rly.h ,
		include/innocent-pear/host/srsly.h ,
		include/innocent-pear/kthxbai.h ,
		include/innocent-pear/lolwut.h ,
		include/innocent-pear/omg.h ,
		include/innocent-pear/orly.h ,
		include/innocent-pear/rofl.h ,
		include/innocent-pear/yarly.h :
		- updated update_outer(...) calls, and internal templates, to
		  select the pseudorandom generator per the number of levels

		share/innocent-pear/doge-1.ccc :
		- upped the number of recursion layers for ptrace(...) call

2016-07-03	Minor cleanup.

		include/innocent-pear/yarly.h :
		- removed unneeded yarly_impl<...>::NewNewState definition

2016-07-01	"An apple a day makes 365 apples a year."

		GNUmakefile :
		- updated to use unambiguous C++ name escaping scheme in
		  lolwutconf/

		lolwutconf/ :
		- bumped from commit eeb2d750ff to 3473dd81a3

2016-06-17	A bit more template parameter checking.

		include/innocent-pear/yarly.h :
		- now checks that type T in yarly<, T, ...> is legitimate

2016-06-12	Some template parameter checking.

		include/innocent-pear/kthxbai.h :